# internal/models/jsonRep/auth.go
@@ -1,0 +1,6 @@
+package jsonrep
+
+type UserAuth struct {
+	Login    string `json:"username"`
+	Password string `json:"password"`
+}
